<resources>
    <string name="app_name">The Classic Container Classes</string>
    <string name="title_linear">Linear Layout</string>
    <string name="title_relative">Relative Layout</string>
    <string name="title_table">Table Layout</string>

    <string name="Login">Login</string>
    <string name="Sign_up">Sign Up</string>
    <string name="title_login">Welcome to Login Page</string>
    <string name="forget_password">Forget your Password?</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
