<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.poplar.isun.theclassiccontainerclasses.LinearFragment">

    <ImageView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:layout_weight="2"
        android:gravity="center"
        android:src="@drawable/logo"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="0.7"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"

        />



    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="0.7"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_security_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_weight="0.7"
        android:text="@string/forget_password"
        android:textSize="15sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/Login"
            android:textSize="20sp"
            android:background="@android:color/holo_blue_dark"/>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/Sign_up"
            android:textSize="20sp"
            android:background="@android:color/holo_blue_dark"/>

    </LinearLayout>
</LinearLayout>
