<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.poplar.isun.theclassiccontainerclasses.RelativeFragment">


    <ImageView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@id/editText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="10dp"
        android:src="@drawable/logo"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editText2"

        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:paddingStart="20dp"

        />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/checkBox"

        android:layout_margin="20dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_security_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:paddingStart="20dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:text="@string/forget_password"
        android:textSize="15sp"

        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:background="@android:color/holo_blue_dark"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/Login"
        android:textSize="20sp"

        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:background="@android:color/holo_blue_dark"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/Sign_up"
        android:textSize="20sp"
        android:layout_alignEnd="@id/button2"
        />
</RelativeLayout>